1、自定义协议，实现对netty的编解码 2、在服务注册时，对socket和netty进行分组注册